[package]
name = "multiplayer_fps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r = { package = "rand", version = "0.8" }
macroquad = "0.3.24"
local-ip-address = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
map = {package= 'some'}
