[package]
name = "multiplayer_fps"
version = "0.1.0"
edition = "2021"

[dependencies]
r = { package = "rand", version = "0.8" }
macroquad = "0.3.24"
local-ip-address = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.2", features = ["full"]}
regex = "1"
